

Not to mention all bugfixes and rewrites.

Coccinella-0.95.12 (0604??):

 o new application theme engine
 o systray support on X11 (linux)
 o features on MacOSX: overlay number of received messages in dock;
   logouts on sleep and power down
 o status shortcut can be used to login
 o auto join option for groupchat bookmarks
 o reworked the details of TLS/SSL/SASL connection methods

Coccinella-0.95.11 (060115):

 o added support for Growl on mac
 o using treectrl widget in a number of places
 o the roster tree component based with different styles
 o an avatar roster style
 o support for multiple roster iconsets
 o main window configurable toolbar/notebook UI
 o extensive build configuration possible
 o integrated Jive/Asterisk phone presence status

Coccinella-0.95.10 (051018):

 o server connections using http possible; http proxy added
 o added the tkpng package; png support now required
 o new icons from Everaldo
 o file transfer using si/bytestreams/ibb/file-transfer protocol
 o notification using bouncing dock icon on Mac OS X
 o ignore menu option in groupchat
 o number of unread chat messages shown in tabs and title
 o historic chat messages in lighter color
 o support for conference bookmarks according to JEP-0048
 o whiteboard actions are now constrained to the actual scroll region

Coccinella-0.95.9 (050821):

 o completely rewritten user interface with new theming engine (tile)
 o vCard avatar

Coccinella-0.95.8 (050620):

 o reworked the registration process

Coccinella-0.95.7 (050429):

 o added canvas locking mechanism

Coccinella-0.95.6 (050425):

 o added PLAIN sasl mechanism
 o updated QuickTime support which fixed an instabilty problem
   and an audio problem on Windows
 o fixed snapshot bug

Coccinella-0.95.5 (050311):

 o added support for kprinter on unix
 o status changes displayed in roster
 o roster remembers which dir items opened/closed
 o can hide offline/transports in roster