@@ -14,6 +14,7 @@ Coccinella-0.95.12 (0604??):
  o status shortcut can be used to login
  o auto join option for groupchat bookmarks
  o reworked the details of TLS/SSL/SASL connection methods
+ o avatar in chat dialogs
 
 Coccinella-0.95.11 (060115):
 
